Add GitHub Actions workflows

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -22,6 +22,7 @@ jobs:
         goarch: ${{ matrix.goarch }}
         goversion: "https://dl.google.com/go/go1.23.1.linux-amd64.tar.gz"
         overwrite: TRUE
-        binary_name: "etcd-ui"
-        build_command: "CGO_ENABLED=0 go build -o bin/etcd-ui -ldflags='-w -s -extldflags=-static' internal/cmd/main.go"
+        pre_command: "export CGO_ENABLED=0"
+        ldflags: "-s -w -extldflags=-static"
+        project_path: "./internal/cmd"
         extra_files: .env.example README.md LICENSE
